[gd_scene load_steps=9 format=3 uid="uid://cxtcvyjqensai"]

[ext_resource type="Script" path="res://objects/shadowPowerLabel.gd" id="1_dy5iy"]
[ext_resource type="Script" path="res://objects/hotbar_controller.gd" id="2_1vfup"]
[ext_resource type="Script" path="res://objects/hotbar_label.gd" id="2_i3ga4"]
[ext_resource type="Texture2D" uid="uid://b4trviivabidl" path="res://textures/shadow_icon.png" id="2_r81cq"]
[ext_resource type="Texture2D" uid="uid://bxh4hx8gup5e4" path="res://textures/selection_indicator.png" id="3_g2cvo"]
[ext_resource type="Script" path="res://objects/hotbar_selector.gd" id="4_jun13"]
[ext_resource type="Texture2D" uid="uid://d280rtbt2yl4r" path="res://textures/shade_icon.png" id="5_dfq47"]
[ext_resource type="Texture2D" uid="uid://ijnky51mi3a4" path="res://textures/light_icon.png" id="6_66cn8"]

[node name="ui_holder" type="Control"]
custom_minimum_size = Vector2(1280, 720)
layout_direction = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="shadowPowerLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -317.0
offset_top = 14.0
offset_right = -17.0
offset_bottom = 264.0
grow_horizontal = 0
theme_override_constants/text_highlight_h_padding = 30
theme_override_constants/text_highlight_v_padding = 0
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[right]Shadow power[/right]"
fit_content = true
script = ExtResource("1_dy5iy")

[node name="hotbar_label" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(450, 100)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -534.0
offset_top = -181.0
offset_right = -84.0
offset_bottom = -141.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Right click to activate:
Shadow Summon[/center]
"
script = ExtResource("2_i3ga4")

[node name="hotbarHbox" type="HBoxContainer" parent="." node_paths=PackedStringArray("shadow_icon", "balloons_icon", "lights_icon")]
custom_minimum_size = Vector2(320, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -372.0
offset_top = -142.0
offset_right = -52.0
offset_bottom = -42.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 10
script = ExtResource("2_1vfup")
shadow_icon = NodePath("shadow_icon")
balloons_icon = NodePath("balloon_icon")
lights_icon = NodePath("light_icon")

[node name="shadow_icon" type="TextureButton" parent="hotbarHbox"]
layout_mode = 2
texture_normal = ExtResource("2_r81cq")

[node name="selector" type="Sprite2D" parent="hotbarHbox/shadow_icon"]
position = Vector2(50, 50)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_g2cvo")
script = ExtResource("4_jun13")

[node name="balloon_icon" type="TextureButton" parent="hotbarHbox"]
layout_mode = 2
texture_normal = ExtResource("5_dfq47")

[node name="light_icon" type="TextureButton" parent="hotbarHbox"]
layout_mode = 2
texture_normal = ExtResource("6_66cn8")

[connection signal="pressed" from="hotbarHbox/shadow_icon" to="hotbarHbox" method="_on_shadow_icon_pressed"]
[connection signal="pressed" from="hotbarHbox/balloon_icon" to="hotbarHbox" method="_on_balloon_icon_pressed"]
[connection signal="pressed" from="hotbarHbox/light_icon" to="hotbarHbox" method="_on_light_icon_pressed"]
